--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -22,6 +22,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        android:fontFamily="@font/alef"
         app:layout_constraintTop_toBottomOf="@+id/activity_main_tv_incorrect" />
 
     <Button
@@ -37,6 +38,7 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
+        android:fontFamily="@font/alef"
         app:layout_constraintTop_toBottomOf="@+id/activity_main_tv_noAccount" />
 
     <EditText
@@ -54,6 +56,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        android:fontFamily="@font/alef"
         app:layout_constraintTop_toBottomOf="@+id/activity_main_et__username" />
 
     <TextView
@@ -67,6 +70,7 @@
         android:textColor="#ffc40d"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/activity_main_tv_noAccount"
+        android:fontFamily="@font/alef"
         app:layout_constraintTop_toBottomOf="@+id/activity_main_et__password" />
 
     <TextView
@@ -79,6 +83,7 @@
         android:textSize="18sp"
         android:textColor="#FFFF"
         app:layout_constraintStart_toStartOf="parent"
+        android:fontFamily="@font/alef"
         app:layout_constraintTop_toBottomOf="@+id/activity_main_et__password" />
 
     <ImageView
@@ -142,6 +147,7 @@
         android:layout_marginEnd="32dp"
         android:textColor="#ffc40d"
         android:visibility="invisible"
+        android:fontFamily="@font/alef"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activity_main_tv_name" />
