--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -19,10 +19,13 @@
         android:layout_gravity="center_horizontal"
         android:text="NOTIFICATIONS"
         android:textSize="40dp"
+        android:fontFamily="@font/alef"
+        android:textStyle="bold"
         android:textColor="#1e7145"></TextView>
 
     <ListView
         android:id="@+id/notificationListView"
+        android:fontFamily="@font/alef"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
