--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -107,14 +107,15 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text=" Followers: "
-            android:textColor="#ffc40d"
+            android:textColor="#1e7145"
             android:textSize="26sp"
-            android:background="@drawable/yellow_border"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:textSize="10sp" />
+            android:background="@drawable/round_yellow"
+            android:textStyle="bold"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
+            android:padding="10dp"/>
+
 
         <TextView
             android:id="@+id/following"
@@ -122,9 +123,15 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text=" Following: "
-            android:textColor="#ffc40d"
+            android:textColor="#1e7145"
             android:textSize="26sp"
-            android:background="@drawable/yellow_border"/>
+            android:background="@drawable/round_yellow"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
+            android:padding="10dp"/>
 
 
 
