--- a/app/src/main/res/layout/activity_depression_page.xml
+++ b/app/src/main/res/layout/activity_depression_page.xml
@@ -14,6 +14,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_keyboard_backspace_yellow" />
+
+
     <TextView
         android:textStyle="bold"
         android:layout_width="wrap_content"
@@ -24,14 +26,22 @@
         android:textSize="25sp"
         android:fontFamily="@font/alef"
         />
+    <ImageView
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:id="@+id/emotionEmoticon"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal">
+    </ImageView>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center">
+        >
         <Button
             android:id="@+id/majorDepression"
-            android:layout_gravity="center_horizontal"
             android:text="Major Depression"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
